<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTransferContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/txt_contentBanking"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextDepositAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_moneyDeposit"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/imageViewQRCode"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/qr_code"
        android:src="@drawable/qr" />

    <TextView
        android:id="@+id/textViewAccountInfo"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_banking" />

</LinearLayout>