<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/main_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="128dp"
                android:text="@string/txt_login"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtUserNameLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/txt_username"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/edtPassWordLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_forgot_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/orange_button_background"
                android:text="@string/txt_login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_noAccount"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="32dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>