<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@color/cardview_dark_background"
    android:layout_marginBottom="8dp">

    <!-- User's Avatar -->
    <ImageView
        android:id="@+id/imgAvatarComment"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/intro_pic"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <!-- User's Name and Rating -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingEnd="8dp"
        tools:ignore="RtlSymmetry">

        <!-- User's Name -->
        <TextView
            android:id="@+id/txtEmailComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp"/>

        <!-- User's Rating (Stars) -->
        <TextView
            android:id="@+id/txtComment"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:maxWidth="250dp"

            android:text="@string/this_is_a_sample_comment"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtRatingComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="@string/txt_Zero"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <!-- User's Comment -->

</LinearLayout>
