<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue"
    android:padding="8dp">

    <!-- ImageView: Ảnh đại diện của phim -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewMovieSearch"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/img_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <!-- TextView: Tên phim -->
    <TextView
        android:id="@+id/textViewTitleSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ten_phim"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewMovieSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView: Số sao (Rating) -->
    <TextView
        android:id="@+id/textViewRatingSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/txt_numberStartttt"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/star"
        app:layout_constraintEnd_toEndOf="@+id/textViewYearSearch"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="@+id/textViewYearSearch"
        app:layout_constraintTop_toBottomOf="@+id/textViewYearSearch" />

    <!-- TextView: Năm sản xuất -->
    <TextView
        android:id="@+id/textViewYearSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="2024"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitleSearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewTitleSearch"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleSearch"
        tools:ignore="HardcodedText" />

    <!-- TextView: Nội dung phim -->
    <TextView
        android:id="@+id/textViewCategoriesSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_category_title"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitleSearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewRatingSearch"
        app:layout_constraintTop_toBottomOf="@+id/textViewRatingSearch"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>
